update on part 2 and some of part 3

--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -5,7 +5,7 @@
           <tr>
             <th>Airline</th>
             <th>Airport</th>
-            <th>Flight No.</th>
+            <th>Flight No</th>
             <th>Departure Date<br>Time</th>
           </tr>
         </thead>
