--- a/views/flights/new.ejs
+++ b/views/flights/new.ejs
@@ -15,12 +15,11 @@
             <option value="LAX">LAX</option>
             <option value="SAN">SAN</option>
         </select>
-        <label for="flight-no">Flight No.</label>
-        <input type="number" name="flight-no" min="10" max="9999">
+        <label for="flightNo">Flight No.</label>
+        <input type="number" name="flightNo" min="10" max="9999">
         <label>Depart: Date/Time</label>
         <input type="datetime-local" value="departure"> 
         <button type="submit" value="Add Flight">Add Flight</button>
-
     </form>
 
 <%- include('../partials/footer') %>
