Added ticket button

--- a/views/flights/show.ejs
+++ b/views/flights/show.ejs
@@ -25,4 +25,8 @@
     <input type="datetime-local" value="arrival"> 
     <button type="submit" value="Add arrival">Add Arrival</button>
 </label>
+
+<!--------Adding Tickets below-->
+<button type="submit"><a href="/flights/<%= flight._id %>/tickets/new"> New Ticket </a></button>
+
 <%- include('../partials/footer') %>
