Updates to the destination feature

--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -16,6 +16,7 @@
                     <td> <%= f.airport %></td>
                     <td> <%= f.flightNo %></td>
                     <td> <%= f.depart %></td>
+                    <td> <%= f.destination %></td>
                     <td><a href="/flights/<%= f._id %>">Details</a></td>
                 </tr>
                 <% }); %>
